# MYCROFT

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  install.sh
.github/workflows/: ci.yml  release.yml
crates/mycroft-cli/: Cargo.toml
crates/mycroft-cli/src/: commands.rs  main.rs
crates/mycroft-core/: Cargo.toml
crates/mycroft-core/src/: error.rs  ids.rs  lib.rs  model.rs  target.rs  time_util.rs
crates/mycroft-core/tests/: target_parsing.rs
crates/mycroft-guard/: Cargo.toml
crates/mycroft-guard/src/: error.rs  lib.rs  resolver.rs  scope.rs
crates/mycroft-guard/tests/: guard.rs
crates/mycroft-normalize/: Cargo.toml
crates/mycroft-normalize/src/: lib.rs  nmap.rs  nuclei.rs
crates/mycroft-normalize/tests/: normalize.rs
crates/mycroft-report/: Cargo.toml
crates/mycroft-report/src/: data.rs  html.rs  lib.rs  md.rs  typ.rs  util.rs
crates/mycroft-report/tests/: report.rs
crates/mycroft-runner/: Cargo.toml
crates/mycroft-runner/src/: capture.rs  lib.rs  sink.rs
crates/mycroft-runner/tests/: runner.rs
crates/mycroft-store/: Cargo.toml
crates/mycroft-store/src/: audit.rs  error.rs  lib.rs  migrations.rs  repo.rs  timefmt.rs
crates/mycroft-store/tests/: store.rs
crates/mycroft-tui/: Cargo.toml
crates/mycroft-tui/src/: app.rs  lib.rs  ui.rs
docs/: AI_MODE.md  ARCHITECTURE.md  DECISIONS.md  RELEASING.md  ROADMAP.md  demo.tape
fixtures/nmap/: scanme.xml
fixtures/nuclei/: findings.jsonl
migrations/: 0001_init.sql
packaging/homebrew/: mycroft.rb
