[workspace]
resolver = "2"
members = [
    "crates/mycroft-core",
    "crates/mycroft-store",
    "crates/mycroft-guard",
    "crates/mycroft-runner",
    "crates/mycroft-normalize",
    "crates/mycroft-report",
    "crates/mycroft-tui",
    "crates/mycroft-cli",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.82"
license = "Apache-2.0"
repository = "https://github.com/mycroft-sec/mycroft"
authors = ["Mycroft contributors"]

[workspace.dependencies]
# Internal crates
mycroft-core = { path = "crates/mycroft-core" }
mycroft-store = { path = "crates/mycroft-store" }
mycroft-guard = { path = "crates/mycroft-guard" }
mycroft-runner = { path = "crates/mycroft-runner" }
mycroft-normalize = { path = "crates/mycroft-normalize" }
mycroft-report = { path = "crates/mycroft-report" }
mycroft-tui = { path = "crates/mycroft-tui" }

# Shared external deps (pinned at workspace level; see docs/DECISIONS.md for rationale)
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
time = { version = "0.3", features = ["formatting", "parsing", "serde", "macros"] }
uuid = { version = "1", features = ["v4", "serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "sync", "time", "fs"] }

[profile.release]
lto = "thin"
strip = true
