[package]
name = "mycroft"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Mycroft — a terminal-native pentest engagement console: recon to report, one console."

[[bin]]
name = "mycroft"
path = "src/main.rs"

[dependencies]
mycroft-core = { workspace = true }
mycroft-store = { workspace = true }
mycroft-guard = { workspace = true }
mycroft-runner = { workspace = true }
mycroft-normalize = { workspace = true }
mycroft-report = { workspace = true }
mycroft-tui = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
