[package]
# The crate name `mycroft` is taken on crates.io (an unrelated 2018 project), so the
# binary crate publishes as `mycroft-cli`. The installed executable is still `mycroft`.
name = "mycroft-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Mycroft — a terminal-native pentest engagement console: recon to report, one console."

[[bin]]
name = "mycroft"
path = "src/main.rs"

[dependencies]
mycroft-core = { workspace = true }
mycroft-store = { workspace = true }
mycroft-guard = { workspace = true }
mycroft-runner = { workspace = true }
mycroft-normalize = { workspace = true }
mycroft-report = { workspace = true }
mycroft-tui = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
