[package]
name = "mycroft-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Mycroft shared domain types and error taxonomy (the contract surface for all crates)."

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
