[package]
name = "mycroft-guard"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Scope parsing, resolution, and enforcement — the security-critical unit."

[dependencies]
mycroft-core = { workspace = true }
thiserror = { workspace = true }
ipnet = "2"
