[package]
name = "mycroft-normalize"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Tool output -> findings normalization (nmap, nuclei). Defensive parsing."

[dependencies]
mycroft-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
roxmltree = "0.20"
