[package]
name = "mycroft-report"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Report export: SQLite -> Markdown / HTML / typst, with evidence appendix."

[dependencies]
mycroft-core = { workspace = true }
mycroft-store = { workspace = true }
anyhow = { workspace = true }
time = { workspace = true }
