[package]
name = "mycroft-store"
# 0.1.0 shipped with an out-of-crate migration include that can't build from crates.io;
# 0.1.1 embeds the migration file inside the crate. Other crates pin `^0.1.0`, so they
# transparently pick up this fix.
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Mycroft persistence: schema, migrations, typed repositories, audit chain."

[features]
default = []
# Encrypt the engagement DB at rest via SQLCipher. Off by default (CLAUDE.md §6).
# When enabled, `Db::open` with a key runs `PRAGMA key`; the sqlcipher backend makes
# it effective. On stock SQLite the pragma is an inert no-op, so the API seam is stable.
encryption = ["rusqlite/bundled-sqlcipher"]

[dependencies]
mycroft-core = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }

[dev-dependencies]
tempfile = "3"
